--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/rudro-sarkar-128/SimplePlay-Discord-Music-Bot#readme",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "check-disk-space": "^3.4.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
